--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>etch-a-sketch wheatscrub11</title>
+    <title>etch-a-sketch</title>
 </head>
 <body>
     <h1 id="title">etch-a-sketch</h1>
